<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootRelative"
    style="@style/Fondo_Estilo_Tema_v1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                layout="@layout/toolbar_fecha_texto_v1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/escribe_tu_correo_electronico"
                android:textColor="@color/fondo_negro_blanco_v1"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />


            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/inputCorreo"
                style="@style/Text_Input_Layout_Estilo_v1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                app:boxStrokeColor="@color/estilo_text_input_box_stroke"
                app:boxStrokeWidth="1dp"
                app:errorIconDrawable="@null"
                app:errorTextAppearance="@style/Text_Input_Layout_Error_Apariencia"
                app:hintTextColor="@color/gris616161"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCorreo"
                    style="@style/Input_Edit_Text_Tema"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo_electronico"
                    android:inputType="textEmailAddress"
                    android:maxLength="200"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    app:hintTextAppearance="@style/Input_Edit_Text_Hint_Input" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnEnviar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="75dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/codigo_boton_redondeado_v1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/continuar"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputCorreo" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</RelativeLayout>


